@@ -1,3 +1,11 @@
+2006-05-25  Larry Jones  <lawrence.jones@ugs.com>
+
+	* sanity.sh: Add -v|--verbose option to echo test names.  Clean
+	up help message.
+	Remove val-tags files for cleanup instead of truncating since the
+	truncation code doesn't work right on Solaris.  Always use -f when
+	removing val-tags.
+
 2006-05-24  Larry Jones  <lawrence.jones@ugs.com>
 
 	* sanity.sh: Remove non-required cipher, digest, and compression
